# springboot-poc

./: README.md  Test2.csv  application.yml  docker-compose.yml  mcmot.txt  pom.xml  test.csv
mcmot/: README.md  main.py  pyproject.toml  setup.py  start.py  stop.py  test.py
mcmot/analytics/: __init__.py  analytics_callback.py  analytics_configuration.py  analytics_init.py  analytics_service.py
mcmot/capture/: __init__.py  capture_callback.py  capture_configuration.py  capture_init.py  capture_service.py
mcmot/config/: pipeline-config.json  pipeline-dual-config.json  pipeline-multi-config.json  pipeline-single-config.json  pipeline-single-nosync-config.json  setup-config.json  setup-multi-config.json  setup-single-config.json
mcmot/config/log/: logging.dev.yaml
mcmot/config/module/: analytics-config.json  analytics-openapi-config.json  capture-config.json  detection-config.json  (+6 more)
mcmot/detection/: __init__.py  detection_callback.py  detection_configuration.py  detection_init.py  detection_service.py
mcmot/framework/: __init__.py
mcmot/observability/: __init__.py  observability_callback.py  observability_configuration.py  observability_init.py  observability_service.py
mcmot/reid/: __init__.py  reid_callback.py  reid_configuration.py  reid_init.py  reid_service.py
mcmot/tracker/: __init__.py  tracker_capture_callback.py  tracker_configuration.py  tracker_detection_callback.py  tracker_init.py  tracker_service.py
mcmot/unification/: __init__.py  unification_callback.py  unification_configuration.py  unification_init.py  unification_service.py
(+227 files in other folders)
