[project]
name = "mcmot"
version = "0.1.0"
description = "This project demonstrates how to scale a Multi-Camera Multi-Object Tracking (MCMOT) application using five computer vision modules: `capture`, `detection`, `reid`, `tracker`, and `unification`."
authors = [
    {name = "Anirban Chakraborty",email = "anirban.c1@tcs.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "kafka-python-ng (>=2.2.3,<3.0.0)",
    "ultralytics (>=8.3.154,<9.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "pykalman (==0.9.7)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "deep-sort-realtime (>=1.3.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "gdown (==5.2.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "langchain-core (>=0.3.66,<0.4.0)",
    "ollama (>=0.5.1,<0.6.0)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "langchain-openai (>=0.3.24,<0.4.0)",
    "cython (>=3.1.2,<4.0.0)",
    "torchreid (>=0.2.5,<0.3.0)",
    "langgraph (>=0.2.0)",
    "langchain (>=0.2.10)",
    "langchain-openai (>=0.1.7)",
    "pydantic (>=2.7.0)",
    "numpy (>=1.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false